# DesignModel

./: .gitignore  CMakeLists.txt  adapter_model.cpp  adapter_model.h  builder_model.cpp  builder_model.h  config.txt  decorator_model.cpp  decorator_model.h  factory_model.cpp  factory_model.h  instance_model.cpp  instance_model.h  iterator_model.cpp  iterator_model.h  main.cpp  observer_model.cpp  observer_model.h  prototype_model.cpp  prototype_model.h  proxy_model.cpp  proxy_model.h  text.txt  vcpkg.json
